tests/machine/x/clj/group_by_left_join.error
Syntax error reading source at (/workspace/mochi/tests/machine/x/clj/group_by_left_join.clj:138:1).
EOF while reading, starting at line 43

Full report at:
/tmp/clojure-7379582461194662022.edn
